--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <a href="https://ohmyspins.com/en/" class="terms-container">
 <img src="assets/terms_button.svg" alt="" class="terms-button">
 </a>
+<script src="./script.js"></script>
 </body>
 </html>
